--- a/email.html
+++ b/email.html
@@ -19,8 +19,8 @@
 						<td valign="top" class="logo" bgcolor="#ffffff"
 							style="padding: 10px 20px 0px 30px; border-left: 1px solid #dbc064;  border-right: 1px solid #dbc064;  border-top: 1px solid #dbc064;">
 							<a href="#">
-								<img src="./assets/imgs/logo_large.gif" alt="Our Vineyard" width="585" height="45"
-									border="0">
+								<img src="./assets/imgs/logo_large.gif" style="margin-left: -15px;" alt="Our Vineyard"
+									width="585" height="45" border="0">
 							</a>
 						</td>
 					</tr>
