add content to banner row

--- a/email.html
+++ b/email.html
@@ -33,7 +33,11 @@
 						</td>
 					</tr>
 					<tr>
-						<td>
+						<!-- banner row -->
+						<td valign="top" bgcolor="#f5f2e5" class="banner"
+							style="border-left: 1px solid #dbc064; border-right: 1px solid #dbc064;">
+							<img src="./assets/imgs/banner_large.jpg" alt="Photo of our Vineyard" width="658"
+								height="180">
 
 						</td>
 					</tr>
