--- a/email.html
+++ b/email.html
@@ -38,16 +38,60 @@
 							style="border-left: 1px solid #dbc064; border-right: 1px solid #dbc064;">
 							<img src="./assets/imgs/banner_large.jpg" alt="Photo of our Vineyard" width="658"
 								height="180">
-
 						</td>
 					</tr>
 					<tr>
-						<td>
-
+						<!-- beginning td tag for content row -->
+						<td valign="top" bgcolor="#f5f2e5" valign="top" class="content"
+							style="padding: 30px 30px 10px 30px; border-right: 1px solid #dbc064; border-left: 1px solid #dbc064; font-family:Arial, Helvetica, sans-serif; font-size: 16px; line-height:22px; color: #654308; background: #f5f2e5 url(/assets/imgs/banner_large_ghost.jpg) no-repeat 0px 0px;">
+							Lorem ipsum dolor sit amet consec tetur adip isicing elit sed do eiusmod tempor incididunt
+							ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercita tion ullamco
+							laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+							voluptate velit esse cillum eu fugiat nulla.
+							<br><br>
+							Enjoy,
+							<br>
+							<img src="/assets/imgs/chris.gif" alt="Chris" width="90" height="40">
 						</td>
 					</tr>
 					<tr>
-						<td>
+						<!--  promos row -->
+						<td valign="top" bgcolor="#f5f2e5" class="promos"
+							style="padding: 10px 30px 25px 30px; border-right:1px solid #dbc064; border-left:1px solid #dbc064; background-color: #f5f2e5; font-family: Arial, Helvetica, sans-serif;">
+							<!-- promo table one -->
+							<table class="promo_1" width="270" align="left">
+								<tr>
+									<td>
+										<img class="promo" alt="Promo image 1" src="./assets/imgs/promo_1_large.jpg">
+										<h3 style="font-size:16px;">Promo heading here</h3>
+										Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna
+										aliqua elit
+										sed
+										do eiusmod.
+										<br><br>
+										<a href="#">Learn more</a>
+									</td>
+								</tr>
+							</table>
+							<!-- promo table two -->
+							<table class="promo_2" width="270" align="right">
+								<tr>
+									<td>
+										<img class="promo" alt="Promo image 2" src="./assets/imgs/promo_2_large.jpg">
+										<h3 style="font-size:16px;">Promo heading here</h3>
+										Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore magna
+										aliqua elit
+										sed
+										do eiusmod.
+										<br><br>
+										<a href="#">Learn more</a>
+									</td>
+								</tr>
+							</table>
+
+
+
+
 
 						</td>
 					</tr>
